--- a/style-v01.css
+++ b/style-v01.css
@@ -1464,6 +1464,9 @@ table {
   .nav-items .nav-item .nav-link{ 
     padding: 24px 24px;
   }
+  .header-btn div{
+    padding: 12px 0;
+  }
   .product-swiper-container:after{
     display: none;
   }
